@@ -18,7 +18,7 @@
       <title>Introduction</title>
       <para>The GNOME &version; Desktop is the latest release of the ever popular, multi-platform free desktop environment.</para>
 
-      <para>Every new version of the GNOME &version; desktop arrives on schedule, with interesting new features and hundreds of bug fixes. This time GNOME makes it easier to work with removable devices and network servers, and provides valuable new tools for system administrators. We have also adopted the popular Evolution email and workgroup client. You can learn more in the following sections.</para>
+      <para>Every new version of the GNOME &version; desktop arrives on schedule, with interesting new features and hundreds of bug fixes. This time GNOME makes it easier to work with removable devices and network servers, and provides valuable new tools for system administrators. We have also adopted the popular <application>Evolution</application> email and workgroup client. You can learn more in the following sections.</para>
 
     <para>GNOME provides a user-friendly environment that &quot;just works&quot;
     for everyday users, without excess complexity or obscure features. At the same
